# Gestion-de-tareas

./: .env  .env.example  .gitignore  .vercelignore  DATABASE_CHANGELOG.txt  DEPLOYMENT.md  MIGRATION_SUMMARY.md  README.md  app.py  bootstrap.php  config.py  database.py  gestor_tareas.sqlite  index.html  index.php  migrate_to_postgres.php  models.py  package.json  pyproject.toml  requirements.txt  run.py  test.php  test_db_connection.php  test_postgres_connection.php  test_postgres_connection_v2.php  vercel.json
api/: db_info.php  db_test.php  index.php  index.py  init-db.php  phpinfo.php  requirements.txt  test.php
app/: __init__.py  modelos.py  utils.py  vistas.py
app/blueprint/: utils.py
app/blueprint/admin/: vistas.py
app/blueprint/auth/: rutas.py
app/blueprint/clients/: vistas.py
app/blueprint/tareas/: rutas.py
app/static/css/: styles.css
app/templates/: base.html  inicio.html
app/templates/admin/: base.html  login.html
config/: conexion.php
css/: estilos.css  styles.css
db/: gestor_tareas.db
documentacion/: documentation.html
js/: app.js  script.js
js/modules/: formValidator.js  messageHandler.js  taskManager.js  utils.js
migrations/versions/: 64724d39bf0c_initial_migration_create_tareas_table.py
php/: actualizar_tarea.php  agregar_tarea.php  conexion.php  eliminar_tarea.php  funciones_tareas.php  obtener_tareas.php  utils.php  verificar_titulo.php
php/utils/: dotenv.php  response_handler.php  validator.php
sql/: database.sql
static/css/: styles.css
static/js/: script.js
templates/: documentation.html  index.html
(+68 files in other folders)
